@@ -52,10 +52,10 @@ class AdminViewSysinfo extends JView
 
 		// Initialise variables.
 		$this->php_settings	= $this->get('PhpSettings');
-		$this->config			= $this->get('config');
+		$this->config		= $this->get('config');
 		$this->info			= $this->get('info');
 		$this->php_info		= $this->get('PhpInfo');
-		$this->directory		= $this->get('directory');
+		$this->directory	= $this->get('directory');
 
 		$this->addToolbar();
 		$this->_setSubMenu();
