@@ -151,4 +151,5 @@ COM_ADMIN_WEB_SERVER="Web Server"
 COM_ADMIN_WRITABLE="Writable"
 COM_ADMIN_XML_DESCRIPTION="Administration system infos component"
 COM_ADMIN_XML_ENABLED="XML Enabled"
+COM_ADMIN_ZIP_ENABLED="Native ZIP Enabled"
 COM_ADMIN_ZLIB_ENABLED="Zlib Enabled"
